add accessibiliy title for btn

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,6 +1,7 @@
 {
   "home": {
     "navbar": {
+      "home": "Home",
       "date": "June 1 - September 1",
       "ticketing": "Ticketing",
       "exhibition": "Digital Exhibition"
